--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,10 @@
-*.py[cod]
-
-# Packages
-*.egg
-*.egg-info
-dist
+*.swp
+*.swo
+*.bak
+*.log
+*.pyc
+ctags
+.tags
 build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Sphinx docs
-doc/_build
+.project
+.pydevproject
